# IPEngine

./: .gitignore  IPCoreProjectDiagram.vsdx  README.md  commands.txt
CMake project template/root/: CMakeLists.txt
CMake project template/root - Kopie/: CMakeLists.txt
CMake project template/root - Kopie/external_dependencies/: IPExternalDependencies.cmake
CMake project template/root - Kopie/external_dependencies/glew/: CMakeLists.txt
CMake project template/root - Kopie/external_dependencies/moodycamel/: CMakeLists.txt
CMake project template/root - Kopie/test/: CMakeLists.txt  test.cpp
CMake project template/root/api_headers/: CMakeLists.txt  IModule_API.h  ISimpleSceneModule_API.h  Transform.h
CMake project template/root/api_headers/api/: IBasicGraphicsContentModule_API.h  IBasicOpenVRModule_API.h  IInput_API.h  IModule_API.h  IPhysicsModule_API.h  ISimpleContentModule_API.h
CMake project template/root/application/: CMakeLists.txt
CMake project template/root/application/src/: Demo.cpp
CMake project template/root/assets/: defaultfragmentshader.fs
CMake project template/root/assets/DependencyGraph/: TestDepGraph.xml
CMake project template/root/assets/Scenes/: TestScene.xml
CMake project template/root/assets/Shaders/: debug_bvs.fs  forward_pbr_with_shadows.fs  forward_pbr_with_shadows.vs  forward_pbribl.fs  forward_pbribl.vs  forward_pbribl_with_shadows.fs  forward_pbribl_with_shadows.vs  gblur.fs  gblur.vs  iblgen_irradiance.fs  iblgen_irradiance.gs  iblgen_irradiance.vs  layered_rendering_scaff.gs
CMake project template/root/assets/app_specific/Scenes/: TestScene.xml
CMake project template/root/assets/app_specific/Shaders/: envconv.fs  iblgen_specular.fs
CMake project template/root/assets/config/: config.cfg
CMake project template/root/cmake/: FindOpenVR.cmake  IPCMakeUtils.cmake  IPExternalDependencies.cmake
CMake project template/root/core/: CMakeLists.txt
CMake project template/root/core/application_base/: CMakeLists.txt
CMake project template/root/core/application_base/include/public/: Application.h
CMake project template/root/core/application_base/src/: Application.cpp
CMake project template/root/core/core/: CMakeLists.txt
CMake project template/root/core/core/src/: core.cpp
CMake project template/root/core/core/src/Config/: ConfigManager.cpp
CMake project template/root/core/core/src/DebugMonitoring/: ErrorHandler.cpp
CMake project template/root/core/core/src/Memory/: MemoryManager.cpp
CMake project template/root/core/core/src/Messaging/: EndpointRegistry.cpp  MessageEndpoint.cpp  MessageQueue.cpp
CMake project template/root/core/core/src/debug_monitoring/: DebugMonitor.cpp  Error.cpp  ErrorHandler.cpp  ErrorManager.cpp
CMake project template/root/core/core/src/runtime/: Console.cpp  Scheduler.cpp
CMake project template/root/core/core/src/threading/: TaskHandle.cpp  ThreadPool.cpp
CMake project template/root/core/injector/: CMakeLists.txt
CMake project template/root/core/injector/src/: Injector.cpp  XMLParser.cpp
CMake project template/root/core/platform_abstraction_layer/: CMakeLists.txt
CMake project template/root/extensions/: CMakeLists.txt  CMakeLists_extension_template.cmake  extension_list.txt
CMake project template/root/extensions/ExtensionTest/: CMakeLists.txt
CMake project template/root/extensions/ExtensionTest/src/: ExtensionTest.cpp
CMake project template/root/extensions/GraphicsModulePostRenderVR/: CMakeLists.txt
CMake project template/root/extensions/GraphicsModulePostRenderVR/include/: GraphicsModulePostRenderVR.h
CMake project template/root/extensions/GraphicsModulePreRenderVR/: CMakeLists.txt
CMake project template/root/extensions/GraphicsModulePreRenderVR/include/: GraphicsModulePreRenderVR.h  libheaders.h
CMake project template/root/extensions/VREntitySceneLoader/: CMakeLists.txt
CMake project template/root/extensions/VREntitySceneLoader/include/: VREntitySceneLoader.h
CMake project template/root/extensions/VREntitySceneLoader/src/: VREntitySceneLoader.cpp
CMake project template/root/extensions/exSSMExtendedPBRPhysicsLoader/: CMakeLists.txt
CMake project template/root/extensions/exSSMExtendedPBRPhysicsLoader/src/: exSSMExtendedPBRPhysicsLoader.cpp
CMake project template/root/extensions/exSSMExtendedWriterPhysics/: CMakeLists.txt
CMake project template/root/external_dependencies/: IPExternalDependencies.cmake
CMake project template/root/external_dependencies/cmake/: FindOpenVR.cmake
CMake project template/root/external_dependencies/glew/: CMakeLists.txt
CMake project template/root/external_dependencies/moodycamel/: CMakeLists.txt
CMake project template/root/external_dependencies/stb_image/: CMakeLists.txt
CMake project template/root/modules/: CMakeLists.txt  CMakeLists_module_template.cmake  module_list.txt
CMake project template/root/modules/BasicOpenVRModule/: CMakeLists.txt
CMake project template/root/modules/DataStoreModule/: CMakeLists.txt
CMake project template/root/modules/GameLogicModule/: CMakeLists.txt
CMake project template/root/modules/GameLogicModule/include/: GameLogicModule.h
CMake project template/root/modules/GraphicsModule/: CMakeLists.txt
CMake project template/root/modules/GraphicsModule/src/: GraphicsModule.cpp  Primitives.cpp  Utils.cpp
CMake project template/root/modules/InputModule/: CMakeLists.txt
CMake project template/root/modules/InputModule/include/: InputModule.h
CMake project template/root/modules/PhysicsModule/: CMakeLists.txt
CMake project template/root/modules/PhysicsModule/include/: PhysicsModule.h
CMake project template/root/modules/SimpleContentModule/: CMakeLists.txt
CMake project template/root/modules/SimpleContentModule/include/: OBJLoader.h  SimpleContentModule.h
CMake project template/root/modules/SimpleContentModule/src/: OBJLoader.cpp
CMake project template/root/modules/SimpleSceneModule/: CMakeLists.txt
CMake project template/root/modules/SimpleSceneModule/src/: Scene.cpp
CMake project template/root/modules/VRGraphicsModule/src/: VRGraphicsModule.cpp
Core/: IModule_API.h
(+851 files in other folders)
